<resources>
    <string name="app_name">GithubAppClean</string>
    <string name="github">Github</string>
    <string name="username">Username</string>
    <string name="imageProfile">Image Profile</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="text_failed_load">Failed to load</string>
    <string name="profile_image">Image Profile</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="followers_value">0</string>
    <string name="followers">Followers</string>
    <string name="following_value">0</string>
    <string name="following">Following</string>
    <string name="repository_value">0</string>
    <string name="repository">Repository</string>
    <string name="tabs">Tabs</string>
    <string name="pager">Pager</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="favorite">Favorite</string>
    <string name="error">An Error is Occurred</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_users_found">No Users Found</string>
    <string name="list">card</string>
    <string name="tab_1">Followers</string>
    <string name="search">Search</string>
    <string name="input_text">Masukkan teks di sini</string>
    <string name="search_user">Search User</string>
    <string name="cancel">Cancel</string>
    <string name="favorites">Favorites</string>
</resources>