<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/detail_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/detail_animation_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_failed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_failed_load"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.6" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/detail_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/appCompatImageView"
                        android:layout_marginStart="16dp"
                        android:visibility="gone"
                        android:contentDescription="@string/favorite_icon"
                        style="@style/Logo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/favorite"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:contentDescription="@string/favorite_icon"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="8dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="centerInside"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                        app:layout_constraintTop_toTopOf="parent" />



                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/detail_image"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:visibility="gone"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/name"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/detail_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_image"
                        app:layout_constraintTop_toTopOf="@+id/detail_image"
                        app:layout_constraintVertical_bias="0.0" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/username"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="@+id/detail_name"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_image"
                        app:layout_constraintTop_toBottomOf="@+id/detail_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:text="@string/company"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/ic_baseline_apartment"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detail_image"
                        app:layout_constraintTop_toBottomOf="@+id/detail_image" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:visibility="gone"
                        app:drawableStartCompat="@drawable/ic_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detail_image"
                        app:layout_constraintTop_toBottomOf="@+id/detail_company" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_followers_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="4dp"
                        android:visibility="gone"
                        android:text="@string/followers_value"
                        app:drawableStartCompat="@drawable/ic_baseline_person"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detail_image"
                        app:layout_constraintTop_toBottomOf="@id/detail_location" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="4dp"
                        android:text="@string/followers"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_followers_value"
                        app:layout_constraintTop_toBottomOf="@id/detail_location" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_following_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="4dp"
                        android:text="@string/following_value"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_followers"
                        app:layout_constraintTop_toBottomOf="@id/detail_location" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="4dp"
                        android:text="@string/following"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_following_value"
                        app:layout_constraintTop_toBottomOf="@id/detail_location" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_repo_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="4dp"
                        android:text="@string/repository_value"
                        android:visibility="gone"
                        android:textColor="?android:textColorPrimary"
                        app:drawableStartCompat="@drawable/ic_baseline_folder_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/detail_image"
                        app:layout_constraintTop_toBottomOf="@id/detail_followers_value" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/detail_repo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:drawablePadding="4dp"
                        android:text="@string/repository"
                        android:visibility="gone"
                        android:textColor="?android:textColorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/detail_repo_value"
                        app:layout_constraintTop_toBottomOf="@+id/detail_followers_value" />

                    <TextView
                        android:id="@+id/detail_failed_data_load"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/text_failed_load"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.8"
                        app:layout_constraintTop_toBottomOf="parent"
                        />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/detail_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    android:background="?attr/colorOnPrimary"
                    android:contentDescription="@string/tabs"
                    app:tabTextColor="?attr/colorPrimary" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/detail_view_pager"
                    android:contentDescription="@string/pager"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>